fix: 🐛notification title no wrap

--- a/wwwroot/css/notification.css
+++ b/wwwroot/css/notification.css
@@ -249,6 +249,11 @@ main .notification-container{
     margin: 0.5rem 1rem 0rem 1rem;
 }
 
+.notification-detail .content .content-title p{
+    text-wrap: wrap;
+    overflow-wrap: anywhere;
+}
+
 .notification-detail .content .content-body{
     font-size: 1rem;
     opacity: 0.8;
